--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "python.pythonPath": "/Users/yuji/.pyenv/versions/3.8.2/bin/python"
+  "python.pythonPath": "/Users/yuji/.pyenv/versions/3.8.2/bin/python",
+  "python.envFile": "${workspaceFolder}/.env"
 }
